--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <main class="advice__container">
       <div class="advice__id">advice # <span id="adviceid">117</span></div>
       <div class="advice__content">
-        it is easy to sit up and take notice,what's difficutl is getting up and
-        taking action.
+        <p>it is easy to sit up and take notice,what's difficutl is getting up and
+        taking action.</p>
       </div>
       <div class="advice__divider">
         <!-- <img src="images/pattern-divider-desktop.svg" alt=""> -->
@@ -32,5 +32,7 @@
       </div>
       <div class="advice__button"></div>
     </main>
+          <div class="error hidden">lose connection</div>
+
   </body>
 </html>
