--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,7 +27,7 @@
       </div>
       <div class="advice__divider">
         <!-- <img src="images/pattern-divider-desktop.svg" alt=""> -->
-        <img src="images/pattern-divider-mobile.svg" alt="" srcset="" />
+        <img src="images/pattern-divider-mobile.svg" alt="patter divider"/>
       </div>
       <div class="advice__button"></div>
     </main>
